--- a/public/helper.html
+++ b/public/helper.html
@@ -212,7 +212,8 @@
 <script src="js/parallax.min.js" type="text/javascript"></script>
 <script src="js/custom.js" type="text/javascript"></script>
 <script src="socket_utils.js" type="text/javascript"></script>
-
+<script src="/socket.io/socket.io.js"></script>
+<script src="socket_utils.js" type="text/javascript"></script>		
 <!-- Vimeo video API -->
 <script src="http://a.vimeocdn.com/js/froogaloop2.min.js"></script>
 <script type="text/javascript" src="js/vimeo.js"></script>
